--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,6 +5,9 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: docker.pkg.github.com/toshipp/rv/builder
+      credentials:
+        username: ${{ github.actor }}
+        password: ${{ github.token }}
       env:
         OBJCOPY: riscv64-elf-objcopy
         RISCV_PREFIX: riscv64-elf-
