--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,13 +4,19 @@ jobs:
   test:
     runs-on: ubuntu-latest
     container:
-      image: docker.pkg.github.com/toshipp/rv/builder
-      credentials:
-        username: ${{ github.actor }}
-        password: ${{ github.token }}
+      image: registry.hub.docker.com/library/archlinux
       env:
-        OBJCOPY: riscv64-elf-objcopy
         RISCV_PREFIX: riscv64-elf-
     steps:
       - uses: actions/checkout@v2
+      - run: |
+          pacman -Sy
+          pacman -S --noconfirm --needed \
+          base-devel \
+          git \
+          iverilog \
+          verilator \
+          riscv64-elf-gcc \
+          riscv64-elf-newlib \
+          yosys
       - run: make test
